Archive2/f2/9c6e1b43b7cf16/output
main.cpp:7:13: error: use of undeclared identifier 'pointer'
    array = pointer ;
            ^
1 error generated.
